part1/1_07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main-app
          image: robsondepaula/main-app:1_07
