part1/1_07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
